[package]
name = "ckb-script"
version = "0.107.0-pre"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
build = "build.rs"
description = "CKB component to run the type/lock scripts."
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[features]
default = ["logging", "detect-asm"]

asm = ["ckb-vm/asm"]
detect-asm = ["ckb-vm/detect-asm"]
logging = ["ckb-logger"]

[dependencies]
ckb-traits = { version = "= 0.106.0" }
byteorder = "1.3.1"
ckb-types = { version = "= 0.106.0" }
ckb-hash = { version = "= 0.106.0" }
ckb-vm = { path = "../../../ckb-vm", default-features = false }
faster-hex = "0.6"
ckb-logger = { version = "= 0.106.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
ckb-error = { version = "= 0.106.0" }
ckb-chain-spec = { version = "= 0.106.0" }
